--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css" />
 </head>
 <body>
-    <nav style="background-color: rgb(137, 51, 51);">
+    <nav class="navbar">
         <ul>
             <li>home</li>
             <li>about</li>
@@ -15,25 +16,29 @@
             <li>contact</li>
         </ul>
     </nav>
-    <section id="home" style="background-color: rgb(100, 92, 92);">
-        <center>
+    <section id="home" >
+    <h1 class="uni">The universe is made of stories</h1>
+    <div class="containers">
+        <a href="https://science.nasa.gov/mercury/facts/">
+        <div class="cards">
             <h1>mercury</h1>
         <img src="mercury.jpg" alt="mercury" height="200" width="200">
         <p>
             Mercury is the closest planet to the Sun, and the smallest planet in our solar system - only slightly larger than Earth's Moon.</p>
-
-   
-    
+        </div></a>
+            <a href="https://science.nasa.gov/venus/venus-facts/">
+            <div class="cards">
             <h1>venus</h1>
             <img src="venus.jpg" alt="venus" height="200" width="200">
-            <p> Venus is the second planet from the Sun, and the sixth largest planet. It’s the hottest planet in our solar system.</p>
-
-   
+            <p> Venus is the second planet from the Sun, and the sixth largest planet. It’s the hottest planet in our solar system.</p></div></a>
+            <a href="https://science.nasa.gov/mars/facts/">
+            <div class="cards">
             <h1>MARS</h1>
             <img src="mars.jpg" alt="mars" height="200" width="200">
-            <p>Mars is the fourth planet from the Sun, and the seventh largest. It’s the only planet we know of inhabited entirely by robots.</p>
-        </center>
+            <p>Mars is the fourth planet from the Sun, and the seventh largest. It’s the only planet we know of inhabited entirely by robots.</p></div></a>
+    </div>
     </section>
+    <div class="borderdiv">
     <section id="about">
         <table border="1">
             <tr>
@@ -52,21 +57,26 @@
 
 
         </table>
-    </section>
-   
-    <section id="resume"  style="background-color: rgb(139, 139, 236);">
-        <h1>who am I ?</h1>
+    </section></div>
+   <div class="borderdiv">
+    <section id="resume"  >
+        <h1 class="big">who am I ?</h1>
         <p> Hello again, in this part i will introduce you to "salma" I'm a girl who used to play guitar , as you see before i love planetary science  also when i was kid i used to dance "ballet" it's a such beautiful hobby i tried so many things such as basketball , swimming I'm a person who adores to try different things </p>
         
-    </section>
-    <section id="work" style="background-color: aquamarine;">
-       <h1>work</h1> 
+    </section></div>
+    <div class="borderdiv">
+    <section id="work" >
+       <h1 class="big">work</h1> 
         <h4> I study at "lycee farhat hached radès" my hole career of studying was in "Radès"
         <br>
         but i studied Music at "conservatoire public hamem linef"
         </h4>
     </section>
-    <footer id="contact" style="background-color: blue;">
+    <button class="button">click here</button>
+    <button class="link">
+        <a href="https://www.youtube.com/?app">youtube</a>
+    </button></div>
+    <footer id="contact" >
         <h1>contact</h1>
          <h4>here's where you can contact me :</h4>
          <button>
@@ -79,7 +89,7 @@
              <img src="fb.jpg" alt="facebook" height="50" width="50">
              </a>
          </button> 
-         <h5>email : salmateeyeb@gmai.com</h5>
+         <h5>email : salmateeyeb@gmailgit.com</h5>
      </footer>
 </body>
 
